List Products Screen changed to use a Recycler instead of text box

--- a/app/src/main/res/layout/activity_list_prod.xml
+++ b/app/src/main/res/layout/activity_list_prod.xml
@@ -31,12 +31,10 @@
         app:layout_constraintTop_toTopOf="parent"
         app:navGraph="@navigation/mobile_navigation" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="178dp"
+        android:layout_height="135dp"
         android:layout_marginTop="24dp"
-        android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/nav_host_fragment_activity_list_prod" />
