--- a/app/src/main/res/layout/activity_list_prod.xml
+++ b/app/src/main/res/layout/activity_list_prod.xml
@@ -34,7 +34,9 @@
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="178dp"
         android:layout_height="135dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
+        android:layout_marginEnd="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/nav_host_fragment_activity_list_prod" />
