--- a/app/src/main/res/layout/activity_owner_account_creation.xml
+++ b/app/src/main/res/layout/activity_owner_account_creation.xml
@@ -127,6 +127,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
+        android:onClick="createOwnerAccount"
         android:text="Create Account"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
