Added RecyclerViewHolder and ProdListAdapter files in cart fragment (dashboard) to create the recyclerview for displaying products in cart.(Not finished). Added frame_cart.xml for recyclerview layout.(Not finished). Creating Customer classes for recording behaviours of customers. --Zhuocheng

--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -7,10 +7,11 @@
     tools:context=".ui.dashboard.DashboardFragment">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/cartrv"
         android:layout_width="363dp"
         android:layout_height="683dp"
-        android:scrollbars = "vertical"
-        app:layoutManager = "LinearLayoutManager"
+        android:scrollbars="vertical"
+        app:layoutManager="LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
