--- a/app/src/main/res/layout/order_item.xml
+++ b/app/src/main/res/layout/order_item.xml
@@ -23,14 +23,18 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Order Completed"
+                android:text="Status: "
                 android:textColor="@color/black"
                 android:textSize="15dp"
                 android:textStyle="bold"/>
 
-            <CheckBox
+            <TextView
+                android:id="@+id/status"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:text="complete/incomplete"
+                android:textColor="@color/black"
+                android:textSize="15dp"/>
 
 
         </LinearLayout>
