Refactored Login to use Model-View-Presenter
Added:
- LoginContract.java
- LoginModel.java
- LoginPresenter.java

Changed:
- CustomerAccountCreationActivity.java
- DatabaseUtils.java
- LoginActivity.java
- activity_login.xml
- OwnerAccount.java (Replaced store field with storeName and storeAddress fields)
- OwnerAccountCreationActivity.java

Deleted:
- DatabaseManager.java

Contributor: Dylan Williams

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:onClick="CreateCustomerAccount"
     tools:context=".LoginActivity">
 
     <TextView
@@ -68,7 +67,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
-        android:onClick="customerLogin"
+        android:onClick="loginAttempt"
         android:text="Login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
