--- a/app/src/main/res/layout/activity_list_orders.xml
+++ b/app/src/main/res/layout/activity_list_orders.xml
@@ -7,9 +7,11 @@
     tools:context=".ListOrders">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/listOrders"
-        android:layout_width="409dp"
-        android:layout_height="729dp"
+        android:id="@+id/listOrders_recycler"
+        android:layout_width="413dp"
+        android:layout_height="632dp"
+        android:layout_marginTop="35dp"
+        android:layout_marginBottom="64dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
