--- a/app/src/main/res/layout/order_item.xml
+++ b/app/src/main/res/layout/order_item.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardElevation="8dp"
     app:cardCornerRadius="8dp"
     android:layout_margin="16dp">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingVertical="10dp">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -73,28 +74,30 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/date_placed"
+                android:text="Order Id:"
                 android:textColor="@color/black"
                 android:textSize="15dp"
                 android:textStyle="bold"/>
 
             <TextView
-                android:id="@+id/date"
+                android:id="@+id/order_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=" date "
+                android:text="order id"
                 android:textColor="@color/black"
                 android:textSize="15dp" />
 
         </LinearLayout>
-
         <Button
             android:id="@+id/button"
-            android:layout_width="345dp"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:text="@string/order_details" />
+            android:text="@string/order_details"
+            android:layout_gravity="center_horizontal"/>
+
 
     </LinearLayout>
+
 
 
 </androidx.cardview.widget.CardView>
