--- a/app/src/main/res/layout/activity_owner_list_products.xml
+++ b/app/src/main/res/layout/activity_owner_list_products.xml
@@ -6,14 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".OwnerListProductsActivity">
 
+    <Button
+        android:id="@+id/owner_add_product"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:onClick="addNewProduct"
+        android:text="Add A Product"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="560dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
