--- a/app/src/main/res/layout/activity_cust_order.xml
+++ b/app/src/main/res/layout/activity_cust_order.xml
@@ -28,8 +28,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/CustOrderRecyclerView"
-        android:layout_width="409dp"
-        android:layout_height="651dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toTopOf="@+id/button5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
