--- a/app/src/main/res/layout/cust_cart_layout.xml
+++ b/app/src/main/res/layout/cust_cart_layout.xml
@@ -22,7 +22,7 @@
             <TextView
                 android:id="@+id/ProdInfo"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginLeft="8dp"
                 android:text="Arya"
                 android:textColor="@color/black"
