--- a/app/src/main/res/layout/cust_order_layout.xml
+++ b/app/src/main/res/layout/cust_order_layout.xml
@@ -16,14 +16,14 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/OrderInfo"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginLeft="8dp"
                 android:textColor="@color/black"
                 android:textSize="20sp"
