--- a/app/src/main/res/layout/activity_list_stores.xml
+++ b/app/src/main/res/layout/activity_list_stores.xml
@@ -6,38 +6,32 @@
     android:layout_height="match_parent"
     tools:context=".ListStores">
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="408dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="16dp"
+        android:fontFamily="sans-serif-smallcaps"
+        android:text="Select  A  Store  To  Shop"
+        android:textAlignment="center"
+        android:textSize="20dp"
+        android:textStyle="italic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.333"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_store"
-        android:layout_width="420dp"
-        android:layout_height="598dp"
-        android:layout_marginTop="51dp"
-        android:layout_marginBottom="82dp"
+        android:layout_width="430dp"
+        android:layout_height="643dp"
+        android:layout_marginTop="70dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="205dp"
-        android:layout_height="82dp"
-        android:backgroundTint="#C99A9F9D"
-        android:text="Completed Orders"
-        android:textColor="@color/black"
-        android:textSize="16dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="205dp"
-        android:layout_height="82dp"
-        android:backgroundTint="#C99A9F9D"
-        android:text="Unfinished Orders"
-        android:textColor="@color/black"
-        android:textSize="16dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+<!--    app:layout_constraintStart_toStartOf="parent"-->
+<!--app:layout_constraintEnd_toEndOf="parent"-->
