Connected Owner Screens
Added
- OwnerToken.java
- NavigationUtils.java

Changed:
- AndroidManifest.xml
- CurrentUser.java
- DatabaseUtils.java
- LoginActivity.java
- MainActivity.java
- Order.java
- Order_Details.java
- OwnerListProductsActivity.java
- OwnerOrdersList.java
- OwnerOrdersListAdapter.java
- OwnerProfileActivity.java

Contributor: Dylan Williams

--- a/app/src/main/res/menu/activity_nav_origin_drawer.xml
+++ b/app/src/main/res/menu/activity_nav_origin_drawer.xml
@@ -11,6 +11,9 @@
             android:id="@+id/nav_see_all_orders"
             android:title="@string/menu_See_ALL_Orders" />
         <item
+            android:id="@+id/nav_profile"
+            android:title="Profile" />
+        <item
             android:id="@+id/nav_logout"
             android:title="@string/menu_Logout" />
     </group>
