Connected and fixed customer screens (navigation not functional yet)
Added
- item_quantity_popup.xml

Changed:
- Cart.java
- CurrentUser.java
- Cust_Cart.java
- Cust_Order.java
- Cust_Prod.java
- CustCartAdapter.java
- CustomerEditProfileActivity.java
- CustomerProfileActivity.java
- CustOrderAdapter.java
- CustProdAdapter.java
- DatabaseUtils.java
- ListStores.java
- LoginActivity.java
- MainActivity.java
- Order.java
- Order_Details.java
- OwnerAddNewProductActivity.java
- OwnerListProductsActivity.java
- OwnerOrdersList.java
- OwnerProfileActivity.java
- Popup.java
- StoresListAdapter.java

Contributor: Dylan Williams

--- a/app/src/main/res/layout/activity_cust_cart.xml
+++ b/app/src/main/res/layout/activity_cust_cart.xml
@@ -10,8 +10,8 @@
         android:id="@+id/button5"
         android:layout_width="0dp"
         android:layout_height="78dp"
-        android:onClick="gotoCust_StoreList"
-        android:text="Stores"
+        android:onClick="gotoCust_Prod"
+        android:text="See Products"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button9"
         app:layout_constraintStart_toStartOf="parent" />
@@ -26,6 +26,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button5" />
 
+    <Button
+        android:id="@+id/button14"
+        android:layout_width="0dp"
+        android:layout_height="78dp"
+        android:onClick="checkout"
+        android:text="checkout"
+        app:layout_constraintBottom_toTopOf="@+id/button5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/CustCartRecyclerView"
         android:layout_width="match_parent"
@@ -34,4 +44,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
