--- a/app/src/main/res/layout/cust_cart_layout.xml
+++ b/app/src/main/res/layout/cust_cart_layout.xml
@@ -9,13 +9,13 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:layout_marginLeft="16dp"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
             android:orientation="horizontal">
 
@@ -35,7 +35,6 @@
                 android:text="PlaceOrder" />
 
         </LinearLayout>
-
 
 
     </LinearLayout>
