--- a/app/src/main/res/layout/cust_order_layout.xml
+++ b/app/src/main/res/layout/cust_order_layout.xml
@@ -10,7 +10,7 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         android:layout_marginLeft="16dp"
         android:orientation="vertical">
 
@@ -39,7 +39,6 @@
                 tools:text="abc" />
 
         </LinearLayout>
-
 
 
     </LinearLayout>
